--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html>
 
 <head>
-    <meta charset="UTF-8" />
+    <meta charset='UTF-8' />
     <title>
-        TeamTreeHouse REMIX
+        TeamTreehouse REMIX
     </title>
+    <link rel='icon' href='src/img/fantast.ico'>
     <style>
         html {
             background: black;
@@ -18,8 +19,8 @@
 </head>
 
 <body>
-    <script src="src/js/framework/phaser.js"></script>
-    <script src="src/level.js"></script>
+    <script src='src/js/framework/phaser.js'></script>
+    <script src='src/level.js'></script>
 
     <script>
         window.onLoad = initializeazaJoc();
