Another minor chages

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>
         TeamTreehouse REMIX
     </title>
-    <link rel='icon' href='src/img/fantast.ico'>
+    <link rel='shortcut icon' href='src/img/fantast.ico'>
     <style>
         html {
             background: black;
