--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset='UTF-8' />
     <title>
-        TeamTreehouse REMIX
+        Simple Platformer
     </title>
     <link rel='shortcut icon' href='src/img/fantast.ico'>
     <style>
