--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <script src='src/level.js'></script>
 
     <script>
-        window.onLoad = initializeazaJoc();
+        window.onLoad = initGame();
     </script>
 </body>
 
