--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
         }
         
         p {
+            color: white;
             text-align: center;
+            font-family: "Courier New";
         }
     </style>
 </head>
