--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
     <script>
         window.onLoad = initGame();
-        document.getElementById(load).remove();
+        document.getElementById('load').remove();
     </script>
 </body>
 
